--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 						<div class="wrap-img">
 							<img src="images/screen.png" />
 						</div>
-						<h3 class="red">Backstage</h3>
-						<p>We have the best End engineers to ensure that data is run and recorded safely.</p>
+						<h3 class="red">Abhi&nbsp;</h3>
+						<p>Front Engineers&nbsp;</p>
 					  <p>&nbsp;</p>
 						<p>&nbsp;</p>
 					</div>
@@ -123,8 +123,8 @@
 						<div class="wrap-img">
 							<img src="images/screen.png" />
 						</div>
-						<h3 class="red">Backstage</h3>
-						<p>We have the best End engineers to ensure that data is run and recorded safely.</p>
+						<h3 class="red">Husain&nbsp;</h3>
+						<p>Front Engineers</p>
 					  <p>&nbsp;</p>
 						<p>&nbsp;</p>
 					</div>
@@ -132,8 +132,8 @@
 						<div class="wrap-img">
 							<img src="images/screen.png" />
 						</div>
-						<h3 class="red">Backstage</h3>
-						<p>We have the best End engineers to ensure that data is run and recorded safely.</p>
+						<h3 class="red">jack&nbsp;</h3>
+						<p>End Engineers</p>
 					  <p>&nbsp;</p>
 						<p>&nbsp;</p>
 					</div>
@@ -141,26 +141,26 @@
 						<div class="wrap-img">
 							<img src="images/screen.png" />
 						</div>
-						<h3 class="red">Backstage</h3>
-						<p>We have the best End engineers to ensure that data is run and recorded safely.</p>
+						<h3 class="red">Jamie</h3>
+						<p>Front engineers&nbsp;</p>
 					  <p>&nbsp;</p>
 						<p>&nbsp;</p>
 					</div>
-					<div class="col-sm-3 box-item">
+					<div class="col-sm-3 box-item1 col-md-offset-1">
 						<div class="wrap-img">
 							<img src="images/screen.png" />
 						</div>
-						<h3 class="red">Backstage</h3>
-						<p>We have the best End engineers to ensure that data is run and recorded safely.</p>
+						<h3 class="red">stuart&nbsp;</h3>
+						<p>Front Engineers</p>
 					  <p>&nbsp;</p>
 						<p>&nbsp;</p>
 					</div>
-					<div class="col-sm-3 box-item">
+					<div class="col-sm-3 box-item1">
 						<div class="wrap-img">
 							<img src="images/screen.png" />
 						</div>
-						<h3 class="red">Backstage</h3>
-						<p>We have the best End engineers to ensure that data is run and recorded safely.</p>
+						<h3 class="red">Hao&nbsp;</h3>
+						<p>Website Developer</p>
 					  <p>&nbsp;</p>
 						<p>&nbsp;</p>
 					</div>
