--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 		<section id="new" class="box-content box-2 box-style">
 			<div class="container">
 				<div class="row">
-					<blockquote>Group motto or babababa</blockquote>
+					<h1>We are based in Heriot Watt University in Edinburgh</h1>
 				</div>		
 			</div>
 		</section>
