--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
 						<div class="wrap-img">
 							<img src="images/screen.png" />
 						</div>
-						<h3 class="red">Abhi&nbsp;</h3>
-						<p>Front Engineers&nbsp;</p>
+						<h3 class="red">Abhi</h3>
+						<p>Liason</p>
 					  <p>&nbsp;</p>
 						<p>&nbsp;</p>
 					</div>
@@ -162,8 +162,8 @@
 						<div class="wrap-img">
 							<img src="images/screen.png" />
 						</div>
-						<h3 class="red">Husain&nbsp;</h3>
-						<p>Front Engineers</p>
+						<h3 class="red">Husain</h3>
+						<p>Organisational Manager</p>
 					  <p>&nbsp;</p>
 						<p>&nbsp;</p>
 					</div>
@@ -171,8 +171,8 @@
 						<div class="wrap-img">
 							<img src="images/screen.png" />
 						</div>
-						<h3 class="red">jack&nbsp;</h3>
-						<p>End Engineers</p>
+						<h3 class="red">Jack</h3>
+						<p>Technical Manager</p>
 					  <p>&nbsp;</p>
 						<p>&nbsp;</p>
 					</div>
@@ -181,7 +181,7 @@
 							<img src="images/screen.png" />
 						</div>
 						<h3 class="red">Jamie</h3>
-						<p>Front engineers&nbsp;</p>
+						<p>Reporter</p>
 					  <p>&nbsp;</p>
 						<p>&nbsp;</p>
 					</div>
@@ -189,8 +189,8 @@
 						<div class="wrap-img">
 							<img src="images/screen.png" />
 						</div>
-						<h3 class="red">stuart&nbsp;</h3>
-						<p>Front Engineers</p>
+						<h3 class="red">Stuart</h3>
+						<p>Lead Frontend Engineer</p>
 					  <p>&nbsp;</p>
 						<p>&nbsp;</p>
 					</div>
@@ -198,7 +198,7 @@
 						<div class="wrap-img">
 							<img src="images/screen.png" />
 						</div>
-						<h3 class="red">Hao&nbsp;</h3>
+						<h3 class="red">Hao</h3>
 						<p>Website Developer</p>
 					  <p>&nbsp;</p>
 						<p>&nbsp;</p>
