--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<!-- Navigation -->
 
 	<!-- Header -->
-	<header>
+	<header id="page-top">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
@@ -145,13 +145,14 @@
 					<div class="col-lg-12">
 						<h2>Our Team</h2>
 						<hr>
-						<div class="intro">We are a group of app developers &nbsp;</div>
+						<div class="intro">Established in 2020 as a University based software development team, Kenobi Development Solutions has been working towards technological success. We provide efficient and effective solutions to clients problems in an energy saving manner which is beneficial to them, ourselves as a company, and the environment as a whole.
+ &nbsp;</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-sm-3 box-item">
 						<div class="wrap-img">
-							<img src="images/screen.png" />
+							<img src="images/Ahbi.jpg" width="192" height="192" class="img-circle" />
 						</div>
 						<h3 class="red">Abhi&nbsp;</h3>
 						<p>Front Engineers&nbsp;</p>
@@ -160,7 +161,7 @@
 					</div>
 					<div class="col-sm-3 box-item">
 						<div class="wrap-img">
-							<img src="images/screen.png" />
+							<img src="images/Husain.png" width="194" height="194" class="img-circle"/>
 						</div>
 						<h3 class="red">Husain&nbsp;</h3>
 						<p>Front Engineers</p>
@@ -169,7 +170,7 @@
 					</div>
 					<div class="col-sm-3 box-item">
 						<div class="wrap-img">
-							<img src="images/screen.png" />
+							<img src="images/Jack.png" width="192" height="180" class="img-circle" />
 						</div>
 						<h3 class="red">jack&nbsp;</h3>
 						<p>End Engineers</p>
@@ -178,7 +179,7 @@
 					</div>
 					<div class="col-sm-3 box-item">
 						<div class="wrap-img">
-							<img src="images/screen.png" />
+							<img src="images/Jamie.png"   class="img-circle" />
 						</div>
 						<h3 class="red">Jamie</h3>
 						<p>Front engineers&nbsp;</p>
@@ -187,7 +188,7 @@
 					</div>
 					<div class="col-sm-3 box-item1 col-md-offset-1">
 						<div class="wrap-img">
-							<img src="images/screen.png" />
+							<img src="images/Stuart.png" width="194" class="img-circle" />
 						</div>
 						<h3 class="red">stuart&nbsp;</h3>
 						<p>Front Engineers</p>
@@ -196,7 +197,7 @@
 					</div>
 					<div class="col-sm-3 box-item1">
 						<div class="wrap-img">
-							<img src="images/screen.png" />
+							<img src="images/Hao.png" width="194" class="img-circle" />
 						</div>
 						<h3 class="red">Hao&nbsp;</h3>
 						<p>Website Developer</p>
