--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 					</div>
 					<div class="col-sm-3 box-item">
 						<div class="wrap-img">
-							<img src="images/Husain.png" width="194" height="194" class="img-circle"/>
+							<img src="images/Husain.png" width="192" height="192" class="img-circle"/>
 						</div>
 						<h3 class="red">Husain</h3>
 						<p>Organisational Manager</p>
@@ -170,7 +170,7 @@
 					</div>
 					<div class="col-sm-3 box-item">
 						<div class="wrap-img">
-							<img src="images/Jack.png" width="192" height="180" class="img-circle" />
+							<img src="images/Jack.png" width="192" height="192" class="img-circle" />
 						</div>
 						<h3 class="red">Jack</h3>
 						<p>Technical Manager</p>
@@ -179,7 +179,7 @@
 					</div>
 					<div class="col-sm-3 box-item">
 						<div class="wrap-img">
-							<img src="images/Jamie.png"   class="img-circle" />
+							<img src="images/Jamie.png" width="192"   class="img-circle" />
 						</div>
 						<h3 class="red">Jamie</h3>
 						<p>Reporter</p>
@@ -188,7 +188,7 @@
 					</div>
 					<div class="col-sm-3 box-item1 col-md-offset-1">
 						<div class="wrap-img">
-							<img src="images/Stuart.png" width="194" class="img-circle" />
+							<img src="images/Stuart.png" width="192" class="img-circle" />
 						</div>
 						<h3 class="red">Stuart</h3>
 						<p>Lead Frontend Engineer</p>
@@ -197,7 +197,7 @@
 					</div>
 					<div class="col-sm-3 box-item1">
 						<div class="wrap-img">
-							<img src="images/Hao.png" width="194" class="img-circle" />
+							<img src="images/Hao.png" width="192" class="img-circle" />
 						</div>
 						<h3 class="red">Hao</h3>
 						<p>Website Developer</p>
