--- a/index.html
+++ b/index.html
@@ -38,10 +38,7 @@
                         <a class="page-scroll" href="#page-top">Home</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Photo App</a>
-                    </li>
-					<li>
-                        <a class="page-scroll" href="#new">New</a>
+                        <a class="page-scroll" href="#services">Products</a>
                     </li>
 					<li>
                         <a class="page-scroll" href="#team">Team</a>
@@ -70,7 +67,7 @@
 						<div class="intro-heading">KENOBI DEVELOPMENT</div>
 					</div>
 					
-					<a class="btn btn-1 btn-sm" href="#team">Our Team</a>
+					<!--<a class="btn btn-1 btn-sm" href="#team">Our Team </a>-->
 				</div>
 			</div>
 		</div>
@@ -83,7 +80,8 @@
 		<section id="services" class="box-content box-1: " style="background-color: white;">
 			<div class="row heading">
 				<div class="col-lg-12">
-					<h2>Photo App (Working Title)</h2>
+					<h2>EDEN</h2>
+					<h3>A location-based image sharing service</h3>
 				</div>
 			</div>
 			<div style="display:flex; flex-direction: row; flex-wrap: wrap; justify-content:space-around;" >
@@ -144,7 +142,6 @@
 				<div class="row heading">
 					<div class="col-lg-12">
 						<h2>Our Team</h2>
-						<hr>
 						<div class="intro">Established in 2020 as a University based software development team, Kenobi Development Solutions has been working towards technological success. We provide efficient and effective solutions to clients problems in an energy saving manner which is beneficial to them, ourselves as a company, and the environment as a whole.
  &nbsp;</div>
 					</div>
@@ -214,7 +211,6 @@
 				<div class="row heading">
 					<div class="col-lg-12">
 	                    <h2>Contact</h2>
-						<hr>
 	                    <div class="intro">If you have any queries...</div>
 	                </div>
 					<div class="intro">Please don't hesitate to get in contact with the liaison, Abhi, at nsj4@hw.ac.uk</div>
